fix z-index of overlay dropdown menu

--- a/css/app.css
+++ b/css/app.css
@@ -421,7 +421,8 @@ ul.main-links {
   opacity: 0;
   visibility: hidden;
   transition: opacity .35s, visibility .35s, height .35s;
-  overflow: hidden; }
+  overflow: hidden;
+  z-index: 99; }
 
 .overlay.open {
   opacity: .9;
